--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ npm-debug.log
 # commented out for learning purposes - otherwise, ALWAYS HAS TO BE INCLUDED IN .gitignore file
 # Environment Variables should NEVER be published
 .env
+.vscode/
